--- a/course_work.tex
+++ b/course_work.tex
@@ -1,19 +1,4 @@
 \documentclass[bachelor, och, coursework]{SCWorks}
-% параметр - тип обучения - одно из значений:
-%    spec     - специальность
-%    bachelor - бакалавриат (по умолчанию)
-%    master   - магистратура
-% параметр - форма обучения - одно из значений:
-%    och   - очное (по умолчанию)
-%    zaoch - заочное
-% параметр - тип работы - одно из значений:
-%    referat    - реферат
-%    coursework - курсовая работа (по умолчанию)
-%    diploma    - дипломная работа
-%    pract      - отчет по практике
-% параметр - включение шрифта
-%    times    - включение шрифта Times New Roman (если установлен)
-%               по умолчанию выключен
 \usepackage{subfigure}
 \usepackage{tikz,pgfplots}
 \pgfplotsset{compat=1.5}
@@ -74,18 +59,13 @@
 
 \begin{document}
 
-% Кафедра (в родительном падеже)
 \chair{теоретических основ компьютерной безопасности и криптографии}
 
-% Тема работы
 \title{Машинное обучение и трейдинг}
 
-% Курс
 \course{3}
 
-% Группа
 \group{331}
-
 
 \department{факультета КНиИТ}
 
@@ -93,34 +73,28 @@
 
 \author{Никитина Арсения Владимировича}
 
-% Заведующий кафедрой
-\chtitle{д.ф.-м.н., доцент} % степень, звание
+\chtitle{д.ф.-м.н., доцент} 
 \chname{М. Б. Абросимов}
 
-%Научный руководитель (для реферата преподаватель проверяющий работу)
-\satitle{д.ф.-м.н., доцент} %должность, степень, звание
+
+\satitle{д.ф.-м.н., доцент}
 \saname{М. Б. Абросимов}
 
 \date{2022}
 
 \maketitle
 
-% Включение нумерации рисунков, формул и таблиц по разделам
-% (по умолчанию - нумерация сквозная)
-% (допускается оба вида нумерации)
-% \secNumbering
-
 %-------------------------------------------------------------------------------------------
 
 \tableofcontents
 
 \intro
-        В последнее время анализ курсов акций является немаловажной проблемой.
-        Так различают фундаментальный анализ, основанный на финансовой и
-        производственной деятельности компаний, а также на общей экономической
-        обстановке выбранной сферы. Также определен технический анализ, который
-        основан на прогнозировании изменения курсов в зависимости от
-        закономерностей изменений цен в прошлом в аналогичных обстоятельствах.
+    В последнее время анализ курсов акций является немаловажной проблемой.
+    Так различают фундаментальный анализ, основанный на финансовой и
+    производственной деятельности компаний, а также на общей экономической
+    обстановке выбранной сферы. Также определен технический анализ, который
+    основан на прогнозировании изменения курсов в зависимости от
+    закономерностей изменений цен в прошлом в аналогичных обстоятельствах.
 
     Таким образом, в данной работе будет рассмотрена концепция технического
     анализа, его основные методы, инструменты, а также будет разработан
@@ -134,7 +108,7 @@
     бирж (в так называемых <<биржевых ямах>>). Позднее, в том же году появилась
     торговля с помощью компьютеров. Сейчас только около 10\% трейдеров
     продолжают торговать в биржевых залах (остальные 90\% торгуют с
-    компьютеров).
+    компьютеров) \cite{HIST}.
 
     Несложно догадаться, что большинство трейдеров, использующих в качестве
     основного инструмента заработка компьютер, пользуются также различными
@@ -172,7 +146,7 @@
     строиться в будущем.
 
     \textit{Волатильность} "--- финансовый показатель, отражающий то, как сильно
-    меняется цена на актив или товар за короткий промежуток времени.[1]
+    меняется цена на актив или товар за короткий промежуток времени \cite{OPCIONS}.
 
     \textit{Искусственный интеллект} (англ. Artificial Intelligence) "---
     технология создания алгоритмов, лежащих в основе проектирования
@@ -201,7 +175,7 @@
         \textit{Временной ряд} — это определенные данные, собранные в разные
         моменты времени, графиком которого является значение времени по оси
         абсцисс и значение наблюдаемой величины в текущий момент времени по оси
-        ординат. [1]
+        ординат \cite{wei2006time}.
 
         Временной ряд может иметь детерминированный компонент в определенный
         момент времени, тогда говорят, что данные временного ряда имеют
@@ -232,7 +206,7 @@
             важность технического анализа давным-давно. Они первыми стали
             торговать фьючерсами. В середине XVII в. они торговали <<пустыми>>
             рисовыми контрактами (рисом, которого еше не было, "--- иначе
-            говоря, рисовыми фьючерсами). [3]
+            говоря, рисовыми фьючерсами) \cite{wagner1993trading}.
 
             Японская свеча состоит из следующих компонентов: 
             \begin{enumerate}
@@ -254,22 +228,22 @@
 
             \subsubsection{Определение тенденции с помощью макисмумов и минимумов}
 
-                В качестве одного из стандартных методов определения тенденции
-                повышения можно рассмотреть последовательности более высоких
-                максимумов и более низких минимумов.    
+            В качестве одного из стандартных методов определения тенденции
+            повышения можно рассмотреть последовательности более высоких
+            максимумов и более низких минимумов \cite{schwager1995technical}.    
 
-                Итак, тенденция повышения является ненарушенной ровно до тех
-                пор, пока зафиксированный предыдущий относительный минимум не
-                будет пробит, то есть не образуется новый минимум. Если такое
-                происходит, то делается вывод о том, что тенденция закончилась
-                или же в скором времени это произойдет.
+            Итак, тенденция повышения является ненарушенной ровно до тех пор,
+            пока зафиксированный предыдущий относительный минимум не будет
+            пробит, то есть не образуется новый минимум. Если такое происходит,
+            то делается вывод о том, что тенденция закончилась или же в скором
+            времени это произойдет.
 
-                Аналогично можно определить и понижающую тенденцию как
-                последовательность более низких минимумов и более низких
-                максимумов. Понижающая тенденция является ненарушенной до тех
-                пор, пока зафиксированный предыдущий максимум не пробит. Если же
-                наблюдается пробитие максимума, то возможно понижающая тенденция
-                подходит к своему завершению.
+            Аналогично можно определить и понижающую тенденцию как
+            последовательность более низких минимумов и более низких максимумов.
+            Понижающая тенденция является ненарушенной до тех пор, пока
+            зафиксированный предыдущий максимум не пробит. Если же наблюдается
+            пробитие максимума, то возможно понижающая тенденция подходит к
+            своему завершению.
 
                 \begin{figure}[H]
                     \centering
@@ -278,15 +252,13 @@
                 \end{figure}
 
             \subsubsection{Линия роста (падения)}
-                Кумулятивная дневная линия роста / падения является одним из
-                наиболее известных индикаторов разброса рынка и часто
-                используется для обнаружения дивергенции (расхождения) с одним
-                из свободных индексов рынка. Как правило, кумулятивная линия
-                роста (падения) вычисляется как скользящая сумма чистого
-                количества растущих акций.
+            Кумулятивная дневная линия роста / падения является одним из
+            наиболее известных индикаторов разброса рынка и часто используется
+            для обнаружения дивергенции (расхождения) с одним из свободных
+            индексов рынка. Как правило, кумулятивная линия роста (падения)
+            вычисляется как скользящая сумма чистого количества растущих акций.
                 
-                Вычисление значений линии роста (падения) проводится в два
-                этапа:
+            Вычисление значений линии роста (падения) проводится в два этапа:
                 \begin{enumerate}
                     \item Вычисление разности между количеством растущих и
                     количеством падающих акций с сохранением знака результата.
@@ -297,9 +269,8 @@
                     акций}.
                 \end{enumerate}
 
-                Также предлагается приступать к вычислению кумулятивной
-                скользящей только после проведения нормализации дневных данных
-                по формуле:
+            Также предлагается приступать к вычислению кумулятивной скользящей
+            только после проведения нормализации дневных данных по формуле:
                 \begin{center}
                     $N = \frac{A - D}{A + D} $, 
                 \end{center}
@@ -356,7 +327,7 @@
         быть глубина, чтобы модель можно было считать <<глубокой>>. Однако можно
         все-таки сказать, что глубокое обучение "--- это наука о моделях, в
         которых уровень композиции обученных функций или обученных концепций
-        выше, чем в традиционном машинном обучении.
+        выше, чем в традиционном машинном обучении \cite{GF}.
 
         \subsection{Использование нейронных сетей для поиска фигур технического анализа}
         Существует целая теория распознавания изображений образов, являющаяся
@@ -391,7 +362,7 @@
         полученных результатов работы. В данной работе же рассматриваются
         детерминированные подходы которые пытаются выделить технические фигуры
         на заданном временном ряде и затем провести прогнозирование поведения
-        ряда в зависимости от найденных фигур.
+        ряда в зависимости от найденных фигур \cite{SHUMKOV}.
 
 
 \section{Практическая часть}
@@ -408,7 +379,7 @@
         таких как NumPy, yfinance и Matplotlib, упрощают анализ результатов
         работы алгоритма, получение котировок акций с различной временной
         градацией.
-        % \cite{python}.
+
 
         %Yahoo Finance
         Yfinance "--- популярная библиотека с открытым исходным кодом,
@@ -430,7 +401,7 @@
 
         Получаемые данные представляют из себя $csv$-файл, в котором
         присутствуют вышеописанные элементы свечей: максимальная (минимальная)
-        цена, открытие (закрытие) акции.
+        цена, открытие (закрытие) акции \cite{YFLIB}.
 
         %Matplotlib
         
@@ -440,7 +411,7 @@
         котировок акций и найденных фигур технического анализа с предполагаемым
         ростом (падением) курса. По оси абсцисс будем брать градуирование даты,
         а по оси ординат будем использовать полученные с помощью yfinance
-        котировки, используя поле $close$.
+        котировки, используя поле $close$ \cite{tosi2009matplotlib}.
 
 
     \subsection{Программная реализация алгоритма}
@@ -463,24 +434,26 @@
     рассмотрим основные фигуры технического анализа и получим закономерности, по
     которым и будут проверяться условия попадания значений в результат.
     
-    \subsubsection{Флаги и вымпелы}
+        \subsubsection{Флаги и вымпелы}
 
-    Флагами и вымпелами называются узкие и краткосрочные (например, от одной до
-    трех недель) фазы консолидации внутри трендов. Фигура называется флагом,
-    когда она ограничена параллельными линиями, и вымпелом, когда линии
-    сходятся. 
+        Флагами и вымпелами называются узкие и краткосрочные (например, от одной
+        до трех недель) фазы консолидации внутри трендов. Фигура называется
+        флагом, когда она ограничена параллельными линиями, и вымпелом, когда
+        линии сходятся. 
 
-    Флаги и вымпелы обычно отражают паузы в сильном тренде, а также зачастую
-    направлены в сторону, противоположную основной тенденции. Иначе говоря, за
-    этими моделями, как правило, следует движение цен в том же направлении,
-    которое предшествовало их формированию.
+        Флаги и вымпелы обычно отражают паузы в сильном тренде, а также зачастую
+        направлены в сторону, противоположную основной тенденции. Иначе говоря,
+        за этими моделями, как правило, следует движение цен в том же
+        направлении, которое предшествовало их формированию.
 
-    Пробой границы флага или вымпела может рассматриваться как подтверждение
-    того, что тренд продолжается, и как сигнал к торговле в направлении тренда. 
+        Пробой границы флага или вымпела может рассматриваться как подтверждение
+        того, что тренд продолжается, и как сигнал к торговле в направлении
+        тренда. 
 
-    Значительный пробой за пределы флага или вымпела в направлении,
-    противоположном ожидаемому, то есть против основной тенденции, может
-    рассматриваться как сигнал потенциального разворота тенденции. 
+        Значительный пробой за пределы флага или вымпела в направлении,
+        противоположном ожидаемому, то есть против основной тенденции, может
+        рассматриваться как сигнал потенциального разворота тенденции
+        \cite{schwager1995technical}. 
 
     \begin{figure}[H]
         \centering
@@ -598,7 +571,7 @@
     подлинная «голова и плечи» формируется только после того, как после пробоя
     <<линии шеи>> произошло значительное движение цен. Модели, которые похожи на
     <<голову и плечи>>, но не удовлетворяют последнему требованию, могут
-    оказаться ложными.
+    оказаться ложными \cite{colby2003encyclopedia}.
     
     \begin{figure}[H]
         \centering
@@ -613,7 +586,7 @@
     фигуры должно быть максимальным из рассматриваемых. Аналогично, четвертое
     значение должно быть строго меньше пятого. Если все данные условия
     выполнены, то делается вывод о том, что сформировалась очередная фигура
-    <<голова и плечи>> и, значит, тренд пойдет вниз \cite{MSDN}.
+    <<голова и плечи>> и, значит, тренд пойдет вниз.
 
     Перевернутая голова и плечи строится аналогично: второе значение строго
     больше первого, четвертое значение строго больше пятого и третье значение
@@ -628,8 +601,9 @@
     Если $x_2 < x_3$ и $x_2 < x_1$, то точка $x_2$ будет являться экстремальным
     значением с дальнейшим восходящим трендом, начиная с точки $x_3$.
 
-    Если же $x_2 > x_3$ и $x_2 > x_1$, то точка $x_2$ будет являться экстремальным
-    значением с дальнейшим нисходящим трендом, начиная с точки $x_3$.
+    Если же $x_2 > x_3$ и $x_2 > x_1$, то точка $x_2$ будет являться
+    экстремальным значением с дальнейшим нисходящим трендом, начиная с точки
+    $x_3$.
 
     Возьмем, например, акции Netflix за последние 5 лет и проверим работу
     рассматриваемого алгоритма.
@@ -661,7 +635,7 @@
     вывод о том, какие из рассматриваемых акций поддаются техническому анализу,
     а также получим общий вывод по работоспособности алгоритма. Все акции будем
     рассматривать за последние пять лет, следовательно цены на акции будем брать
-    с промежутком в один день.
+    с промежутком в один день \cite{YF}.
     
     На графике будем изображать работу алгоритма поиска экстремумов, а также
     будем наносить поверх графика экстремумов найденные фигуры с предполагаемым 
@@ -754,14 +728,13 @@
         \end{tabular}
         \end{table}
 
-    В данный момент, особенно в связи с пандемией, онлайн--рекрутмент
-    стал одним из самых популярных направлений бизнеса, поэтому рассмотрим в 
-    качестве представителя акций высокой волатильности американскую компанию
-    Recruiter.
+    В данный момент, особенно в связи с пандемией, онлайн--рекрутмент стал одним
+    из самых популярных направлений бизнеса, поэтому рассмотрим в качестве
+    представителя акций высокой волатильности американскую компанию Recruiter.
 
-    Для данной акции, начиная с середины 2021 года, технический анализ представляется
-    возможным, так как наибольшее число фигур было найдено в это время. В большинстве
-    случаев предполагаемый курс совпал с действительным.
+    Для данной акции, начиная с середины 2021 года, технический анализ
+    представляется возможным, так как наибольшее число фигур было найдено в это
+    время. В большинстве случаев предполагаемый курс совпал с действительным.
     
     Котировка считается технически анализируемой.
 
@@ -1057,36 +1030,16 @@
     \inputencoding{cp1251}
     \bibliography{thesis}
     \inputencoding{utf8}
-% \begin{thebibliography}{99}
-    % https://secretmag.ru/enciklopediya/chto-takoe-volatilnost-obyasnyaem-prostymi-slovami.htm
-    % https://www.investopedia.com/terms/t/timeseries.asp
-    % https://www.investopedia.com/trading/candlestick-charting-what-is-it/
-    % https://docs.google.com/file/d/0B7zVAgSBB3MeRXVVTmo2SzlfbFE/edit?resourcekey=0-cCN4jErXZGzi8bWmQU4bgA
-    % https://finance.yahoo.com/
-    % The encyclopedia of technical market indicators. Robert W. Colby
-    % https://algotrading101.com/learn/yfinance-guide/ YAHOO FINANCE
-    % https://www.activestate.com/resources/quick-reads/what-is-matplotlib-in-python-how-to-use-it-for-plotting/
-    % https://scorum.ru/ru-ru/other/@goldenbogdan/fondovaya-birzha-v-1980-e-treiding-do-kompyuternoi-epokhi-kak-eto-bylo-chast-1
-
-    % \bibitem{Gud} Гудфеллоу Я., Бенджио И., Курвилль А., ''Глубокое обучение'',
-    % г. Москва, Издательство ДМК, 2018 г., Яз. рус.
-    
-
-    % \bibitem{neur} Короткий С., ''Нейронные сети: Основные положения'',
-    % [Электронный ресурс] : [статья] / URL:
-    % http://www.shestopaloff.ca/kyriako/Russian/Artificial_Intelligence/Some_publications/Korotky_Neuron_network_Lectures.pdf
-    % (дата обращения 27.04.2022) Загл. с экрана. Яз. рус.
-% \end{thebibliography}
 
 \appendix
+    \setminted[py]{fontsize=\small, breaklines=true, style=bw, linenos}
+    \section{Код \texttt{drawing.py}}
+    \inputminted{py}{code/drawing.py}
 
-    \section{Код drawing.py}
-    \inputminted[fontsize=\footnotesize]{text}{code/drawing.py}
+    \section{Код \texttt{figures.py}}
+    \inputminted{py}{code/figures.py}
 
-    \section{Код figures.py}
-    \inputminted[fontsize=\footnotesize]{text}{code/figures.py}
-
-    \section{Код main.py}
-    \inputminted[fontsize=\footnotesize]{text}{code/main.py}
+    \section{Код \texttt{main.py}}
+    \inputminted{py}{code/main.py}
 
 \end{document}
